force-app/main/default/objects/Purchase_Order__c/fields/QBO_SyncToken__c.field-meta.xml
<CustomField>
    <fullName>QBO_SyncToken__c</fullName>
    <label>QBO SyncToken</label>
    <length>20</length>
    <type>Text</type>
</CustomField>